# termail

./: .gitignore  Cargo.toml  README.md  config.toml
plugins/rocketship/: README.md  manifest.toml  pyproject.toml  rocketship.py
plugins/signature-rs/: Cargo.toml  README.md  manifest.toml
plugins/signature-rs/src/: lib.rs
plugins/updated-manifest/: manifest.json
src/: auth.rs  config.rs  error.rs  imap_client.rs  logger.rs  maildir.rs  main.rs  types.rs
src/auth/: mod.rs  oauth.rs
src/backends/: gmail.rs  greenmail.rs  mod.rs
src/cli/: command.rs
src/core/: editor.rs  email.rs  label.rs  mod.rs
src/plugins/: events.rs  mod.rs  permissions.rs  plugins.rs
src/ui/: app.rs  event.rs  inputs.rs  mod.rs  ui.rs
src/ui/components/: composer_view.rs  folder_pane.rs  inbox.rs  message_view.rs  mod.rs
test/: docker-compose.yml  send_image.py  test_send_long_mail.py  test_send_mail.py
wit/: main.wit
