[package]
name = "termail"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
google-gmail1 = { version = "6.0.0", features = ["yup-oauth2"] }
google-apis-common = "7.0.0"
hyper = "1.7.0"
imap = "2.4.1"
native-tls = "0.2.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.30.0-beta.0", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3.31"
async-trait = "0.1.89"
lettre = { version = "0.11", features = ["builder", "smtp-transport"] }
tempfile = "3.23.0"
wasmtime = { version = "38.0.3", features = ["component-model"] }
wasmtime-wasi = "38.0.3"
wit-bindgen = "0.47.0"
base64 = "0.22.1"
uuid = { version = "1.18.1", features = ["v4"] }
cap-std = "3.4.5"
maildir = "0.6.4"
mailparse = "0.14"
image = "0.25.9"
ratatui-image = { version = "8.0.2", features = ["crossterm", "tokio"] }

[profile.dev.package.wasmtime]
opt-level = 3
